--- a/website/magicboxautomation/src/index.css
+++ b/website/magicboxautomation/src/index.css
@@ -1,6 +1,9 @@
-body {
+html,body {
   margin: 0;
   padding: 0;
+   width: 100vw;
+   margin-left: 3px;
+   overflow-x: hidden;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -12,3 +15,4 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
